improve search results between products

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,7 +1,7 @@
 = {productname} Documentation
 
 ifeval::[{mlm-content} == true]
-[.currentrel]**Version: {productnumber} Alpha 2**
+[.currentrel]**Version: {productnumber} {currentversion}**
 endif::[]
 
 ifeval::[{uyuni-content} == true]
