--- a/modules/client-configuration/pages/supported-features-openeuler.adoc
+++ b/modules/client-configuration/pages/supported-features-openeuler.adoc
@@ -1,6 +1,8 @@
 [[supported-features-openeuler]]
 = Supported {openeuler} Features
-
+ifeval::[{mlm-content} == true]
+:noindex:
+endif::[]
 
 This table lists the availability of various features on {openeuler} clients.
 
