--- a/modules/retail/pages/retail-install-uyuni.adoc
+++ b/modules/retail/pages/retail-install-uyuni.adoc
@@ -1,5 +1,8 @@
 [[retail-install-uyuni]]
 = Install Uyuni Retail Server with openSUSE
+ifeval::[{mlm-content} == true]
+:noindex:
+endif::[]
 
 {productname} {smr} Server can be installed on openSUSE.
 
