--- a/modules/retail/pages/retail-uyuni-server-setup.adoc
+++ b/modules/retail/pages/retail-uyuni-server-setup.adoc
@@ -1,5 +1,8 @@
 [[retail-server-setup]]
 = Retail Uyuni Server Setup
+ifeval::[{mlm-content} == true]
+:noindex:
+endif::[]
 
 This section covers {productname} {smr} Server setup, using these procedures:
 
