--- a/modules/specialized-guides/pages/public-cloud-guide/byos/clients.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/clients.adoc
@@ -1,5 +1,8 @@
 [[quickstart-publiccloud-clients]]
 = Client Registration
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 When you have your {productname} Server and, optionally, your {productname} Proxy set up, you are ready to start registering clients.
 
