--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-appendix.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-appendix.adoc
@@ -1,4 +1,7 @@
 = Appendix
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == Countries that can transact {productname} {payg} through the cloud marketplace
 
