--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc
@@ -1,4 +1,7 @@
 = {aws} Image Preparation and Configuration
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 This section covers initial preparation and configuration of the image on {aws}.
 
