--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -1,4 +1,7 @@
 = Connecting {payg} Clients and Client Registration
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == Managing Connections and Registering {payg} and {byos} images
 
