--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc
@@ -1,4 +1,7 @@
 = Obtaining the {productname} Server {payg} Public Cloud Image on {aws}
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 Follow these step-by-step instructions to locate the {productname} {productnumber} {payg} image on {aws}.
 You can also review the latest available images for the public cloud using Pint (Public Cloud Information Tracker).
