--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-requirements.adoc
@@ -1,4 +1,7 @@
 = {aws} System Requirements
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 When setting up a {productname} {payg} instance on {aws}, it is essential to consider system requirements for optimal performance and functionality. 
 The default requirements outlined below have been tailored for smooth deployment and operation. 
