--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-connections-and-bootstrapping.adoc
@@ -1,4 +1,7 @@
 = {payg} Client connections and Client Registration
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == Managing Connections and Registering {payg} and {byos} Images
 
