--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
@@ -1,4 +1,7 @@
 = Obtaining the {productname} Server {payg} Public Cloud Image on {azure}
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 Follow these step-by-step instructions to locate the {productname} {productnumber} {payg} image on {azure}.
 
