--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
@@ -1,4 +1,8 @@
 = Azure System Requirements
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
+
 The {productname} {payg} offering in Azure need to communicate with the Azure Billing API, therefore it is not a simple virtual machine (VM) offering.
 
 Azure has created the Managed Application offering for this use case.
