--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -1,5 +1,8 @@
 [[azure-server-setup]]
 = Initial Setup
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 .Procedure: Log in and Update the System
 . SSH into your {azure} instance.
