--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-limitations.adoc
@@ -1,4 +1,7 @@
 = {payg} Limitations
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == Onboarded {byos} Instances without {scc} Credentials
 
