--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -1,4 +1,7 @@
 = {payg} Overview
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 :description: {productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. 
 {payg} does not require a long-term subscription. 
 Users can leverage the images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. 
