--- a/modules/specialized-guides/pages/public-cloud-guide/public-cloud-faq.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/public-cloud-faq.adoc
@@ -1,4 +1,7 @@
 = {productname} {payg} on the Cloud: FAQ
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: October 2023
