--- a/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-configure-payg-behind-proxy.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-configure-payg-behind-proxy.adoc
@@ -1,5 +1,8 @@
 [[tshoot-public-cloud-configure-payg-behind-proxy]]
 = Configure {payglongform} Behind Proxy
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 To identify if a machine is {payg} or not, {productname} needs to use [literal]``sudo`` to run [literal]``instance-flavor-check``tool.
 
