--- a/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-intro.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-intro.adoc
@@ -1,5 +1,9 @@
 [[troubleshooting-public-cloud]]
 = Troubleshooting Public Cloud
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
+
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: March 2024
