--- a/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-setup-separate-disk-byos.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-setup-separate-disk-byos.adoc
@@ -1,6 +1,8 @@
 [[tshoot-public-cloud-setup-separate-disk-byos]]
 = Set up {productname} with Separate Disk for {byos}
-
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 == Issue
 
