--- a/modules/specialized-guides/pages/salt/salt-formula-saline.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-saline.adoc
@@ -25,8 +25,8 @@ These formulas are extending the configuration of Grafana and Prometheus created
 .Procedure: Configuring the Saline Grafana Formula
 . Navigate to the menu:Formulas[Saline Grafana] tab, and set these parameters in the [guimenu]``Saline Grafana`` section:
 . In the [guimenu]``Dashboards`` section, check the dashboards you want to use:
-* [guimenu]``Uyuni server dashboard with Saline``
-* [guimenu]``Uyuni Saline States Job dashboard``
+* [guimenu]``{productname} server dashboard with Saline``
+* [guimenu]``{productname} Saline States Job dashboard``
 . Click btn:[Save Formula] to save your configuration.
 
 == Activate Forms
