--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -26,7 +26,7 @@ To deploy Saline on the {productname} Server use [command]``mgradm upgrade podma
 Saline can be deployed during the installation of the {productname} Server using [command]``mgradm install podman`` with [option]``--saline-replicas 1``.
 The only possible values for [option]``--saline-replicas`` are ``1`` or ``0``.
 The default port [option]``8216`` can be changed with specifying [option]``--saline-port NNNN`` (where [literal]``NNNN`` is a desired port number) on calling [command]``mgradm upgrade podman``.
-After finishing the deployment [literal]``uyuni-server-saline@0.service`` should be configured on the {productname} Server host system.
+After finishing the deployment [literal]``{productname}-server-saline@0.service`` should be configured on the {productname} Server host system.
 
 == {salt} master configuration recommendations
 
@@ -44,7 +44,7 @@ To remove Saline from the {productname} Server use [command]``mgradm upgrade pod
 
 == Examples of resulting Grafana dashboards
 
-=== Uyuni Server (with Saline) dashboard
+=== {productname} Server (with Saline) dashboard
 
 The dashboard represents {salt} events with the different views presented on the panels.
 
