--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-general.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-general.adoc
@@ -1,4 +1,7 @@
 = Billing - General
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 :availability: AWS & Azure
 :sectnums!:
 :lastupdate: October 2023
