--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-server-setup.adoc
@@ -1,5 +1,8 @@
 [[aws-server-setup]]
 = Server Setup
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 .Procedure: Log in and Update the System
 . SSH into your {AWS} instance.
