--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
@@ -1,4 +1,8 @@
 = Initial Preparation and Configuration of the {azure} Managed Application
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
+
 This section covers initial preparation and configuration of the Managed Application on {azure}.
 
 .Procedure: Configuring your {productname} instance
