improve search results between products (#3741)

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
@@ -1,5 +1,9 @@
-= Initial Preparation and Configuration of the {azure} Image
-This section covers initial preparation and configuration of the image on {azure}.
+= Initial Preparation and Configuration of the {azure} Managed Application
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
+
+This section covers initial preparation and configuration of the Managed Application on {azure}.
 
 .Procedure: Configuring your {productname} instance
 
