--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
@@ -1,4 +1,9 @@
-= {azure} System Requirements
+= Azure System Requirements
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
+
+The {productname} {payg} offering in Azure need to communicate with the Azure Billing API, therefore it is not a simple virtual machine (VM) offering.
 
 When setting up a {productname} {payg} instance on {azure}, it s essential to consider system requirements for optimal performance and functionality. 
 The default requirements outlined below have been tailored for smooth deployment and operation.
