--- a/modules/installation-and-upgrade/pages/container-deployment/register-proxy-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/register-proxy-suma.adoc
@@ -1,5 +1,7 @@
 == Register {sle-micro} and {productname} {productnumber} Proxy
-
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 // Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
 
 .Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
