remove mlm and replace with suma

--- a/modules/client-configuration/pages/client-upgrades-uyuni.adoc
+++ b/modules/client-configuration/pages/client-upgrades-uyuni.adoc
@@ -1,6 +1,6 @@
 [[client-upgrades-uyuni]]
 = Upgrade Uyuni Clients
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
