--- a/modules/client-configuration/pages/clients-openeuler.adoc
+++ b/modules/client-configuration/pages/clients-openeuler.adoc
@@ -1,6 +1,6 @@
 [[clients-openeuler]]
 = Registering {openeuler} Clients
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
