--- a/modules/client-configuration/pages/registration-overview-openeuler.adoc
+++ b/modules/client-configuration/pages/registration-overview-openeuler.adoc
@@ -1,6 +1,6 @@
 [[openeuler-registration-overview]]
 = OpenEuler Client Registration
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
