--- a/modules/client-configuration/pages/supported-features-openeuler.adoc
+++ b/modules/client-configuration/pages/supported-features-openeuler.adoc
@@ -1,6 +1,6 @@
 [[supported-features-openeuler]]
 = Supported {openeuler} Features
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
