--- a/modules/retail/pages/retail-install-uyuni.adoc
+++ b/modules/retail/pages/retail-install-uyuni.adoc
@@ -1,6 +1,6 @@
 [[retail-install-uyuni]]
 = Install Uyuni Retail Server with openSUSE
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
