--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -1,6 +1,6 @@
 [[retail-branchserver]]
 = Retail Uyuni Branch Server
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
