--- a/modules/retail/pages/retail-uyuni-server-setup.adoc
+++ b/modules/retail/pages/retail-uyuni-server-setup.adoc
@@ -1,6 +1,6 @@
 [[retail-server-setup]]
 = Retail Uyuni Server Setup
-ifeval::[{mlm-content} == true]
+ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
