improve search results between products (#3741) (#3742)
* improve search results between products (#3741)

* remove mlm and replace with suma

* update

--- a/modules/client-configuration/pages/client-upgrades-uyuni.adoc
+++ b/modules/client-configuration/pages/client-upgrades-uyuni.adoc
@@ -1,5 +1,8 @@
 [[client-upgrades-uyuni]]
 = Upgrade Uyuni Clients
+ifeval::[{suma-content} == true]
+:noindex:
+endif::[]
 
 In this section, we use openSUSE Leap as an example.
 
