--- a/modules/client-configuration/pages/clients-openeuler.adoc
+++ b/modules/client-configuration/pages/clients-openeuler.adoc
@@ -1,5 +1,8 @@
 [[clients-openeuler]]
 = Registering {openeuler} Clients
+ifeval::[{suma-content} == true]
+:noindex:
+endif::[]
 
 This section contains information about registering clients running {openeuler} operating systems.
 
