--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -1,5 +1,8 @@
 [[retail-branchserver]]
 = Retail Uyuni Branch Server
+ifeval::[{suma-content} == true]
+:noindex:
+endif::[]
 
 This section covers {productname} {smr} Branch Server installation and setup, using these procedures:
 
