--- a/modules/client-configuration/pages/registration-overview-openeuler.adoc
+++ b/modules/client-configuration/pages/registration-overview-openeuler.adoc
@@ -1,5 +1,8 @@
 [[openeuler-registration-overview]]
 = OpenEuler Client Registration
+ifeval::[{suma-content} == true]
+:noindex:
+endif::[]
 
 You can register {openeuler} clients to your {productname} Server.
 The method and details varies depending on the operating system of the client.
