add basic info on mgr-ssl-cert-setup (per feedback)

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -113,7 +113,8 @@ mgrctl exec -ti -- rm /tmp/<Root_CA_Certificate> /tmp/<Server_Cert_File> \
 
 Intermediate CAs can either be available in the file which is specified with `--root-ca-file` or specified as extra options with `--intermediate-ca-file`.
 The `--intermediate-ca-file` option can be specified multiple times.
-The [command]``mgr-ssl-cert-setup`` command performs a number of tests on the provided files to test if they are valid and can be used for the requested use case.
+The [command]``mgr-ssl-cert-setup`` command tests if provided files are valid and suitable for the requested use case.
+The command then copies or deploys the files to all the places where they are needed.
 
 .Procedure: Restarting the Server
 . On the containter host, restart the server to pick up the changes:
@@ -127,7 +128,7 @@ mgradm restart
 
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
-Generate a new configuration tarball and deploy it:
+Generate a new configuration tarball and deploy it.
 
 ifeval::[{mlm-content} == true]
 For more information, see xref:installation-and-upgrade:container-deployment/mlm/proxy-deployment-mlm.adoc#_generate_proxy_configuration[].
@@ -138,11 +139,7 @@ For more information, see xref:installation-and-upgrade:container-deployment/uyu
 proxy-deployment-uyuni.adoc
 endif::[]
 
-If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
-
-
-=== Deploy the Root CA on Salt Clients
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
