remove "salt" to describe clients

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -144,10 +144,10 @@ endif::[]
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
 
-.Procedure: Deploying the Root CA on Salt Clients
+.Procedure: Deploying the Root CA on Clients
 
 . In the {productname} {webui}, navigate to menu:Systems[Overview].
-. Check all your Salt Clients to add them to the system set manager.
+. Check all your clients to add them to the system set manager.
 . Navigate to menu:Systems[System Set Manager > Overview].
 . In the [guimenu]``States`` field, click btn:[Apply] to apply the system states.
 . In the [guimenu]``Highstate`` page, click btn:[Apply Highstate] to propagate the changes to the clients.
