--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -209,7 +209,7 @@ As a result of this behavior:
 ====
 In general, {suse} recommends to adjust the value for the cache directory to about 80 % of available free space.
 The [option]``cache_dir`` value is set when generating proxy configuration on the server.
-You cannot set option directly in [path]``squid.conf``.
+You cannot set the option directly in [path]``squid.conf``.
 ====
 
 
