Backport 5.0.3: iau proxy storage #1235567 (#3673) (#3714)
https://github.com/SUSE/spacewalk/issues/26181
Co-authored-by: Ornela Marić <omaric@suse.com>

* Update modules/installation-and-upgrade/pages/install-proxy.adoc

--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -1,130 +1,6 @@
 [[installation-proxy]]
-= Install {productname} Proxy from Packages
+= Install {productname} Proxy
+// **This file is needed to link generically to proxy installation**
 
-To install {productname} Proxy from packages, you will need to start by installing {sles} media.
-This section covers the KVM settings required to perform a {sles} installation as the base for {productname} Proxy.
-In this section, we use a KVM and a virtual machine manager as a sandbox for the installation.
-
-
-
-[[installation-proxy-requirements]]
-== SLES KVM Requirements
-
-Use these settings to create a new virtual machine with [command]``virt-manager`` (replace [literal]``<version>`` with the actual version string):
-
-[cols="1,1", options="header"]
-.KVM Settings for SLES
-|===
-| Installation Method: | Local install media (ISO image or CDROM)
-| OS:                  | Linux
-| Version:             |``SLE-``[literal]``<version>````-Server-x86_64-GM-DVD1.iso``
-| Memory:              | _Test Server_ Minumum 2{nbsp}GB
-|                      | _Production Server_ Minimum 8{nbsp}GB
-| CPUs:                | 2
-| Storage Format:      | ISO 3{nbsp}GB
-| Disk Space:          | 230{nbsp}GB split between
-|                      | [path]``/`` _(root)_ Minimum 24{nbsp}GB
-|                      | (Virtual Disk 1) [path]``/srv`` Minimum 100{nbsp}GB
-|                      | (Virtual Disk 2) [path]``/var/cache`` _(Squid)_ Minimum 100{nbsp}GB
-| Name:                | example-proxy
-| Network              | Bridge br0
-|===
-
-
-
-[[installation-proxy-sles-settings]]
-=== SLES KVM Settings
-
-This section covers the {productname} Proxy installation, using the full installation media with KVM and [command]``virt-manager``.
-Before you begin, you will need to have created an account with {scclongform}, and downloaded the {sles} installation media.
-
-
-
-.Procedure: Preparing for SLES Installation
-
-. In the Virtual Machine Manager tool ([command]``virt-manager``), click menu:File[New Virtual Machine].
-
-. Click btn:[Local install media (ISO image or CDROM)].
-
-. In the [guimenu]``Create a new virtual machine`` dialog, click btn:[Browse] and locate the full SLES image you downloaded from your {scc} account.
-
-. Configure your machine with at least 2 GB RAM and a minimum of 2 CPUs.
-
-. Create a storage device with a minimum of 230 GB storage space for the installation.
-During the SLES installation this disk should be partitioned into the following partitions:
-+
-
-[cols="1", options="header"]
-|===
-| Disk Space Requirements
-| 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/srv/``
-| 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/var/cache/``
-|===
-+
-
-The remaining storage space will be used by the operating system for the root partition.
-
-. Click btn:[Finish] to save the installation settings and begin the installation.
-
-For more information on installing {sles}, see:
-
-link:{sles-base-os-documentation}/article-installation.html[].
-
-
-
-[[installation-proxy-sles]]
-== Change SLES for {productname} Proxy
-
-
-[[proc-installation-proxy-sles]]
-.Procedure: Changing SLES for {productname} Proxy Installation
-
-. Log in as `root`.
-
-. Uninstall the `sles-release` package:
-+
-
-----
-rpm -e --nodeps sles-release
-----
-+
-
-. Register {productname} Proxy with {scc} (for example, replace `<productversion>` with `{productnumber}` and `<architecture>` with `x86_64`):
-+
-
-----
-SUSEConnect -e <EMAIL_ADDRESS> -r <SUSE_MANAGER_PROXY_CODE> \
--p SUSE-Manager-Proxy/<productversion>/<architecture>
-----
-+
-
-. Add {productname} repositories:
-+
-
-----
-SUSEConnect -p sle-module-basesystem/15.5/x86_64
-SUSEConnect -p sle-module-server-applications/15.5/x86_64
-SUSEConnect -p sle-module-suse-manager-proxy/4.3/x86_64
-----
-+
-
-. Check that you have allowed installing recommended packages.
-Check the settings in `/etc/zypp/zypp.conf`:
-+
-
-----
-solver.onlyRequires = false
-----
-+
-
-. Install the {productname} Proxy pattern:
-+
-
-----
-zypper in -t pattern suma_proxy
-----
-+
-
-. Reboot.
-
-Continue with registering the installed {productname} Proxy as a client: xref:installation-and-upgrade:proxy-registration.adoc[].
+There are various scenarios to deploy a {productname} Proxy.
+All these scenarios presume you have already successfully deployed a {productname} {productnumber} Server.
