--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -27,10 +27,16 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-{sle-micro} {microversion} is ths operation system of the container host and requires as free disk space:
+One of {sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operating system of the container host.
+In the following, {sles} as the installed host operating system is explicitly mentioned only if it matters.
+Otherwise we either write {sle-micro} or just host operating system.
+
+The container host with {sle-micro} as operating system requires as free disk space:
 
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
+
+Depending on the amount of selected software, {sles} as operating system can require considerably more disk space.
 
 By default the {productname} Server container stores mirrored repository (packages or products), database, and other data in subdirectories of the [path]``/var/lib/containers/storage/volumes/`` directory.
 Repository synchronization fails if this directory runs out of disk space.
@@ -253,6 +259,11 @@ We recommend you use XFS as the filesystem type for all volumes.
 The size of the disk for repositories storage is dependent on the number of distributions and channels you intend to manage with {productname}.
 See the tables in this section for guides to estimate the size required.
 
+[IMPORTANT]
+====
+Do not use NFS for storage because it does not support SELinux file labeling.
+====
+
 On the {productname} Server, use this command to find all available storage devices:
 
 ----
@@ -288,10 +299,10 @@ The disk setup is virtual and separate disks for volumes are possible and recomm
 // container-deployment/suma/server-deployment-suma.adoc
 For other deployments, separate disks for volumes are also recommended.
 
-On the {productname} Server, the [command]``mgr-storage-server`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
+On the container host of the {productname} Server, the [command]``mgr-storage-server`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
 Optionally, if a second device name is specified, [command]``mgr-storage-server`` moves the content of the [path]``/var/lib/containers/storage/volumes/var-pgsql`` database directory to a second separate disk and remounts it to [path]``/var/lib/containers/storage/volumes/var-pgsql``.
 
-Similarily on the {productname} Proxy, the [command]``mgr-storage-proxy`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
+Similarly, on the container host of the {productname} Proxy, the [command]``mgr-storage-proxy`` command moves the complete content of the [path]``/var/lib/containers/storage/volumes`` directory to a separate disk and remounts it to [path]``/var/lib/containers/storage/volumes``.
 
 
 
