--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -1,10 +1,11 @@
 [[deploy-suma-server]]
-= {productname} {productnumber} Server Deployment on {sle-micro}
+= {productname} {productnumber} Server Deployment
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion}.
+This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion} or {sles} {bci-suma}.
+
 
 // Link to hardware requirements do not show them here. We list them on other pages.
 // Done within next section.
@@ -19,7 +20,9 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Software and Hardware Requirements
 |===
 | Software and Hardware  | Recommended
-| Operating System       | {sle-micro} {microversion}
+| Operating System       | {sle-micro} {microversion} or
+
+                           {sles} {bci-suma}
 | Architecture           | {x86_64}, {arm}, {s390x}, {ppc64le}
 | Processor (CPU)        | Minimum of four (4) 64-bit CPU cores
 | RAM                    | 16 GB
@@ -33,7 +36,7 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Supported operating system for the Server Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sle-micro} {microversion}.
+The supported operating system for the container host is {sle-micro} {microversion} or {sles} {bci-suma}.
 
 Container host::
 A container host is a server equipped with a container engine like [systemitem]``Podman``, which lets it manage and deploy containers.
@@ -41,7 +44,6 @@ These containers hold applications and their essential parts, such as libraries,
 This setup ensures applications run the same way in different environments.
 The container host supplies the necessary resources such as CPU, memory, and storage for these containers.
 ====
-
 
 [IMPORTANT]
 ====
@@ -82,12 +84,11 @@ Recommended minimum size for this is at least 300 GB, and larger if there will 
 Recommended Filesystem::
 XFS (though any supported filesystem for {sle-micro} {microversion} could work).
 
-====
-
 Optional::
 You can provide custom storage for the volumes by mounting disks on the expected volume path inside it such as [path]``/var/lib/containers/storage/volumes/var-spacewalk``.
 This adds to the complexity of a {productname} deployment, and may affect the resilience the default storage recommendation provides.
 
+====
 
 For a list of all persistent volumes in the container, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
 
@@ -96,7 +97,7 @@ For a list of all persistent volumes in the container, see xref:installation-and
 
 
 [[deploy-suma-server-micro]]
-== {sle-micro} {microversion} Installation
+==  Deploy {productname} on {sle-micro} {microversion}
 
 .Procedure: Download the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
@@ -104,6 +105,7 @@ For a list of all persistent volumes in the container, see xref:installation-and
 . Prepare a DVD or USB flash drive with the downloaded [filename]``.iso`` image for installation.
 . Insert the DVD or USB flash drive (USB disk or key) containing the installation image for {sle-micro} {microversion}.
 . Boot or reboot your system.
+
 +
 
 For more information about preparing your machines (virtual or physical), see link:https://documentation.suse.com/sle-micro/5.5/html/SLE-Micro-all/book-deployment-slemicro.html[{sle-micro} {microversion} Deployment Guide].
@@ -116,6 +118,7 @@ For more information about preparing your machines (virtual or physical), see li
 . Click [systemitem]``Next`` to continue.
 . Select the registration method.
   For this example, we will register the server with {scclongform}.
+
 +
 
 .Registering {productname} as an Extension during Installation
@@ -128,7 +131,9 @@ Depending on the specific extension needed from the list below, additional {sccl
 * {productname} {productnumber} Proxy
 * Retail Branch Server
 ====
+
 +
+
 [IMPORTANT]
 ====
 The {sle-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
@@ -157,13 +162,17 @@ This section provides steps on registering your products after {sle-micro} {micr
 
 .Procedure: Post Installation Product Registration
 . Register {sle-micro} {microversion} to {scclongform} from the command line run the following commands on the container host:
+
 +
+
 ----
 transactional-update register -r <reg_code> -e <your_email>
 ----
 
 . Use the registration code you obtained from your {scclongform} account for {sle-micro} {microversion}.
+
 +
+
 [NOTE]
 ====
 The following steps register a server with the {x86_64} architecture and thus require a registration code for the {x86_64} architecture.
@@ -172,13 +181,17 @@ To register {arm} or {s390x} architectures use the correct registration code.
 
 . Next add the **SUSE Manager Server Extension 5.0 x86_64** Extension.
   List available extensions with the following command:
+
 +
+
 ----
 transactional-update --quiet register --list-extensions
 ----
 
 . Use your **SUSE Manager Server Extension 5.0 x86_64** registration code with the following command:
+
 +
+
 ----
 transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <reg_code>
 ----
@@ -190,6 +203,7 @@ transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <reg_code>
 .Procedure
 . Log in as *root*.
 . Run **transactional-update**:
+
 +
 
 [source, shell]
@@ -208,18 +222,25 @@ It is highly recommended to configure custom persistent storage with the [comman
 This tool simplifies creating the container storage and database volumes.
 +
 Use the command in the following manner:
+
 +
 
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
 ----
+
 +
+
 For example:
+
 +
+
 ----
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
+
 +
+
 
 [NOTE]
 ====
@@ -232,6 +253,43 @@ For more information, see
 ====
 
 
+ifeval::[{suma-content} == true]
+== Install {productname} on {sles} {bci-suma}
+
+Alternatively, you can install {productname} on {sles} {bci-suma}.
+The following procedure describes the main steps of the installation process.
+
+.Procedure: Installing {productname} on {sles} {bci-suma}
+. Locate and download {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
+. Make sure that the {scc} code you plan to use has the Extensions enabled.
+. Start the installation of {sles} {bci-suma}.
+  .. On the [literal]``Language, keyboard and product selection`` select the product to install.
+  .. On the [literal]``License agreement`` read the agreement and check [guimenu]``I Agree to the License Terms``.
+. Select the registration method. 
+. In the screen [literal]``Extensions and Modules Selection`` check the following:
+  * {productname} Server Extension
+  * Basesystem Module
+  * Containers Module
+. Complete the installation.
+. When the installation completes, log in to the newly installed server as root.
+. As root, run
+
++
+
+[source,shell]
+----
+zypper install podman
+----
+. Finish the {productname} installation on {sles} {bci-suma} by running command:
+
++
+
+[source,shell]
+----
+mgradm install podman
+----
+endif::[]
+
 
 [[deploy-suma-server-mgradm]]
 == Deploy with [literal]``mgradm``
@@ -239,11 +297,14 @@ For more information, see
 .Procedure: Deploying {productname} {productnumber} Using [literal]``mgradm``
 . Log in as root.
 . Execute the following command, replacing `<suma.example.com>` with your fully qualified domain name:
+
 +
+
 [source,shell]
 ----
 mgradm install podman <suma.example.com>
 ----
+
 +
 
 [IMPORTANT]
@@ -260,6 +321,7 @@ Use the {productname} {productnumber} registration key when prompted.
 ====
 
 . Enter a certificate and administrator account password when prompted.
+
 +
 
 [NOTE]
@@ -267,6 +329,7 @@ Use the {productname} {productnumber} registration key when prompted.
 The administrator account password must be at least 5 characters and less
 than 48 characters in length.
 ====
+
 +
 
 . Press btn:[Enter].
@@ -323,10 +386,13 @@ When the credentials are confirmed with a green check-mark icon, proceed with <<
   You can monitor the progress of the operation in section on the right ``Refresh the product catalog from {scclongform}``.
   The table of products lists architecture, channels, and status information.
   For more information, see xref:reference:admin/setup-wizard.adoc[Wizard].
+
 +
+
 image::admin_suse_products.png[scaledwidth=80%]
 . Use the ``Filter by product description`` and ``Filter by architecture`` to filter the list of displayed products.
   The channels listed on the btn:[Products] page provide repositories for clients.
+
 +
 
 * Add channels to {productname} by selecting the check box to the left of each channel.
