--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -25,29 +25,44 @@ Bootstrapping this way will only work if you use the [package]``salt-minion`` be
 == {salt} Bundle Configuration
 
 {salt} Bundle ([package]``venv-salt-minion``)::
+
 +
+
 * [path]``/etc/venv-salt-minion/``
 * [path]``/etc/venv-salt-minion/minion``
 * [path]``/etc/venv-salt-minion/minion.d/NAME.conf``
 * systemd service file: [path]``venv-salt-minion.service``
+
 +
+
 For more information about the Salt bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
 
 .Procedure: Registering Clients with Salt Bundle Configuration File
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
+
 +
+
+[source, Shell]
 ----
 /etc/venv-salt-minion/minion
 ----
+
 +
+
 or:
+
 +
+
+[source, Shell]
 ----
 /etc/venv-salt-minion/minion.d/NAME.conf
 ----
 . In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any. Also add the other configuration parameters listed below.
+
 +
+
+[source, YAML]
 ----
 master: SERVER.EXAMPLE.COM
 
@@ -61,12 +76,18 @@ enable_fqdns_grains: False
 ----
 
 . Restart the [systemitem]``venv-salt-minion`` service:
+
 +
+
+[source, Shell]
 ----
 systemctl restart venv-salt-minion
 ----
+
 . On the {productname} Server, accept the new client key; replace [systemitem]``<client>`` with the name of your client:
+
 +
+
 ----
 salt-key -a '<client>'
 ----
@@ -84,19 +105,31 @@ Client ([package]``salt-minion``)::
 .Procedure: Registering Clients with Salt Minion Configuration File
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
+
 +
+
+[source, Shell]
 ----
 /etc/salt/minion
 ----
+
 +
+
 or:
+
 +
+
+[source,Shell]
 ----
 /etc/salt/minion.d/NAME.conf
 ----
+
 . In the file add or edit the FQDN of the {productname} Server or Proxy, and the activation key if any.
   Also add the other configuration parameters listed below.
+
 +
+
+[source, YAML]
 ----
 master: SERVER.EXAMPLE.COM
 
@@ -110,12 +143,19 @@ enable_fqdns_grains: False
 ----
 
 . Restart the [systemitem]``salt-minion`` service:
+
 +
+
+[source, Shell]
 ----
 systemctl restart salt-minion
 ----
+
 . On the {productname} Server, accept the new client key; replace [systemitem]``<client>`` with the name of your client:
+
 +
+
+[source,Shell]
 ----
 salt-key -a '<client>'
 ----
