--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
@@ -20,8 +20,8 @@ As there are restrictions on which countries this listing can be billed, the acc
 
 There are currently two offers for {productname} {payg} on {azure}:
 
-* **{productname} {productnumber} with 24x7 Support ltd**
-* **{productname} {productnumber} with 24x7 Support llc**
+* ** {productname} {productnumber} with 24x7 Support (EMEA Orders only)**
+* **{productname} {productnumber} with 24x7 Support**
 
 +
 
