--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -5,9 +5,10 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 .Procedure: Log in and Update the System
-. SSH into your {azure} instance.
+. Within the Managed Resource group you have set up, you will find the virtual machine. To get the details, click on the name of the virtual machine.
+Here you can see the (public) IP address which you need to connect to the running instance. SSH into your {azure} instance. 
 
-. Switch to the root user and update the system.
+. Switch to the root user and update the system .
 
 +
 
@@ -16,6 +17,8 @@ endif::[]
 sudo -i
 transactional-update
 ----
+
+. Reboot the system.
 
 
 
